<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.attendeessignedup.AttendeesSignedUpFragment">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hosted_event_list_view"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/list_empty_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:text="No one has signed up for this event"
            android:textSize="20dp"
            android:layout_margin="50dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>