<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50sp"
            android:contentDescription="Avatar Placeholder"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="12dp"
            android:text="Display user name:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@id/profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text="Name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:text="Email address:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text="Email_address"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="28dp"
            android:text="Phone number:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@id/profile_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <EditText
            android:id="@+id/profile_phone_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text="Phone_number"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:text="Homepage Link:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@id/profile_homepage_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_phone_number" />

        <EditText
            android:id="@+id/profile_homepage_link"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text="Homepage Link"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/profile_save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_homepage_link">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Allow Geolocation?"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/profile_geolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginEnd="100sp"
            android:backgroundTint="@color/teal_700"
            android:text="Save"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0"
            tools:ignore="HardcodedText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editProfilePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/removeProfilePictureButton"
            android:layout_width="40dp"
            android:layout_height="38dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/editProfilePictureButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>